# launchplane

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: actionlint.yaml  dependabot.yml  github-repo-workflow.json
config/: dokploy-targets.toml.example  dokploy.toml  harbor-authz.toml.example  launchplane-authz.toml  launchplane-authz.toml.example  release-tuples.toml  release-tuples.toml.example  runtime-environments.toml.example
control_plane/: __init__.py  cli.py  dokploy.py  harbor_mutations.py  launchplane_mutations.py  odoo_instance_overrides.py  product_config.py  product_context_audit.py  product_context_cutover.py  release_tuples.py  runtime_environments.py  secrets.py  service.py  service_auth.py  service_human_auth.py  tracked_target_logs.py  ui.py
docs/: README.md  architecture.md  compatibility-retirement.md  config-boundary.md  driver-descriptors.md  driver-development.md  new-product-repo.md  operations.md  operator-experience.md  product-repo-contract.md  public-readiness.md  records.md  secrets.md  service-boundary.md  ui-standards.md  verireel-prod-rollback-runtime.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: proxmox-prod-gate-filter.sh  start-harbor-service.sh  start-launchplane-service.sh
tests/: test_dokploy.py  test_driver_descriptors.py  test_evidence_ingestion.py  test_filesystem_store.py  test_generic_web_deploy.py  test_generic_web_preview.py  test_generic_web_promotion.py  test_harbor_previews.py  test_launchplane_mutations.py  test_launchplane_previews.py  test_odoo_artifact_publish.py  test_odoo_instance_override_rendering.py  test_odoo_instance_overrides.py  test_odoo_post_deploy.py  test_odoo_prod_backup_gate.py  test_odoo_prod_promotion.py  test_odoo_prod_rollback.py  test_postgres_store.py  test_preview_desired_state.py  test_preview_lifecycle_cleanup.py  test_preview_pr_feedback.py  test_product_context_cutover.py  test_product_environment_read_model.py  test_product_onboarding.py  test_product_profile_context_audit.py  test_promote.py  test_release_tuples.py  test_runtime_environments.py  test_secrets.py  test_service.py  test_service_auth.py  test_ui.py  (+11 more)
(+102 files in other folders)
