[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "harbor"
version = "0.1.0"
description = "Harbor control-plane contracts and workflows for deployment truth and promotion"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "pydantic>=2.8",
    "psycopg[binary]>=3.2",
    "pyjwt[crypto]>=2.10",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "ruff>=0.12",
]

[project.scripts]
harbor = "control_plane.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["control_plane"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
