[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "launchplane"
version = "0.1.0"
description = "Launchplane control-plane contracts and workflows for deployment truth and promotion"
requires-python = ">=3.13"
dependencies = [
    "Authlib>=1.7.0",
    "click>=8.3.3",
    "pydantic>=2.13.3",
    "psycopg[binary]>=3.3.3",
    "pyjwt[crypto]>=2.12.1",
    "requests>=2.32.0",
    "sqlalchemy>=2.0",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[project.scripts]
launchplane = "control_plane.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["control_plane"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
